<package>
  <name>simulator_rviz_plugin</name>
  <version>0.0.0</version>
  <description>
    name:pkg name simulator_rviz_plugin
  </description>
  <maintainer email="vcisunhao@163.com">Sun.Hao</maintainer>
  <license>TODO</license>

  <url>todo</url>
  <author>Sun.Hao</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>


  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>
  <run_depend>rviz</run_depend>

  <export>
    <rosdoc config="${prefix}/rosdoc.yaml"/>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
